spelling correction countries

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                 <a
                   href="https://countries-of-the-world-25202.firebaseapp.com/"
                   target="_blank"
-                  >Country of the world</a
+                  >Countries of the world</a
                 >
               </li>
             </ol>
